tests/transpiler/x/java/two-sum.error
exit status 1
Main.java:2: error: incompatible types: int[] cannot be converted to int
    static int result = twoSum(new int[]{2, 7, 11, 15}, 9);
                               ^
Main.java:5: error: int cannot be dereferenced
        int n = nums.length();
                    ^
Main.java:8: error: array required, but int found
                if (nums[i] + nums[j] == target) {
                        ^
Main.java:8: error: array required, but int found
                if (nums[i] + nums[j] == target) {
                                  ^
Main.java:9: error: incompatible types: int[] cannot be converted to int
                    return new int[]{i, j};
                           ^
Main.java:13: error: incompatible types: int[] cannot be converted to int
        return new int[]{-1, -1};
               ^
Main.java:16: error: array required, but int found
        System.out.println(result[0]);
                                 ^
Main.java:17: error: array required, but int found
        System.out.println(result[1]);
                                 ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors
